fix: dockerfile api

--- a/todolist/back-end/Dockerfile
+++ b/todolist/back-end/Dockerfile
@@ -1,14 +1,11 @@
 # Use uma imagem base do Node.js Alpine com a versão desejada
 FROM node:18.18.2-alpine
 
-# Instale o gerenciador de pacotes Yarn
-RUN npm install -g yarn
-
 # Crie um diretório de trabalho na imagem Docker
 WORKDIR /app
 
 # Copie o package.json e o arquivo yarn.lock para o diretório de trabalho
-COPY package.json ./
+COPY package.json yarn.lock ./
 
 # Instale as dependências do projeto
 RUN yarn install
@@ -20,10 +17,10 @@ COPY . .
 COPY tsconfig.json ./
 
 # Execute os comandos para criar o banco de dados e aplicar as migrações
-RUN yarn migrate:dev && yarn migrate:run
+RUN yarn migrate:dev --name init && yarn migrate:run
 
 # Exponha a porta utilizada pela sua aplicação
-EXPOSE 3000
+EXPOSE $PORT
 
 # Comando para iniciar a aplicação quando o contêiner for executado
 CMD ["yarn", "dev"]
